syntax = "proto3";
package MagiCloud.NetWorks;
//连接信息
message ConnectInfo{
  int32 id=1;		
}
