syntax = "proto3";
package MagiCloud.NetWorks;
//实验信息
message ExperimentInfo{
	string ownProject=1;	//所属项目
	string name=2;	//实验名称
	int32 id=3;	//实验ID
	bool isBack=4;	//是否执行返回命令
	string prefabPath = 5;
}


